--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,15 +1,58 @@
-name: my-snap-name # you probably want to 'snapcraft register <name>'
-version: '0.1' # just for humans, typically '1.2+git' or '1.3.2'
-summary: Single-line elevator pitch for your amazing snap # 79 char long summary
+name: grafana 
+version: 4.4.3-1
+summary: The tool for monitoring and metric analytics & dashboards
 description: |
-  This is my-snap's description. You have a paragraph or two to tell the
-  most important story about your snap. Keep it under 100 words though,
-  we live in tweetspace and your description wants to look good in the snap
-  store.
+  Grafana is an open source, feature rich metrics dashboard and graph editor for Graphite,
+  Elasticsearch, OpenTSDB, Prometheus and InfluxDB.
+confinement: strict
+grade: stable
 
-confinement: devmode # use 'strict' once you have the right plugs and slots
+apps:
+  grafana:
+    command: bin/grafana-internal
+    plugs:
+      - network
+      - network-bind
+    daemon: simple
 
 parts:
-  my-part:
-    # See 'snapcraft plugins'
+  grafana-common:
+    plugin: dump
+    source: bin
+    organize:
+      grafana-internal: bin/
+  grafana:
     plugin: nil
+    source-type: git
+    source: https://github.com/grafana/grafana
+    source-branch: v4.4.x
+    prepare: |
+      mkdir -p $GOPATH/src/github.com/grafana
+      ln -s  $PWD $GOPATH/src/github.com/grafana/grafana
+    build: |
+      cd $GOPATH/src/github.com/grafana/grafana
+      go run build.go setup
+      go run build.go build
+    install: |
+      mkdir -p $SNAPCRAFT_PART_INSTALL/conf
+      mkdir -p $SNAPCRAFT_PART_INSTALL/bin
+      cp conf/defaults.ini $SNAPCRAFT_PART_INSTALL/conf/
+      cp bin/* $SNAPCRAFT_PART_INSTALL/bin/
+    after: [go]
+  go:
+    source-tag: go1.8.3
+  grafana-ui:
+    plugin: nil
+    source-type: git
+    source: https://github.com/grafana/grafana
+    prepare: |
+      mkdir ~/.npm-global
+      npm config set prefix '~/.npm-global'
+      export PATH=~/.npm-global/bin:$PATH
+    build: |
+      npm install -g yarn
+      yarn install --pure-lockfile
+      npm run build
+    install: |
+      cp -rf public_gen $SNAPCRAFT_PART_INSTALL/public
+    after: [grafana]
